# ref-finance-stableswap-math

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  bun.lockb  package.json
pkg/: README.md  package.json  ref_finance_stableswap_math.d.ts  ref_finance_stableswap_math.js  ref_finance_stableswap_math_bg.wasm  ref_finance_stableswap_math_bg.wasm.d.ts
src/: lib.rs  utils.rs
src/ref_finance/: README.md  admin_fee.rs  math.rs  mod.rs  utils.rs
tests/: get-amount-out-audit.test.ts
