[package]
name = "ref-finance-stableswap-math"
version = "0.1.0"
authors = ["Emil Ibatullin <emil.ibatullin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"

near-sdk = { version = "3.1.0", default-features = false }
uint = { version = "0.9.3", default-features = false }
js-sys = "0.3.70"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
